# okfgen

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  TESTING.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  publish.yml  spec-watch.yml
docs/: RECORD_DEMO.md  acme-sales.html  index.html  launch-kit.md  observability-docs.html  petclinic-api.html  toronto-beaches.html
okfgen/: __init__.py  agent.py  cli.py  consumer.py  detect.py  enrich.py  llm.py  mcp_server.py  model.py  searchindex.py  validate.py  visualize.py  yamlfm.py
okfgen/sources/: __init__.py  base.py  bigquery.py  ckan.py  firebase.py  git.py  localdir.py  scan.py  schema.py  socrata.py  webdocs.py
samples/: README.md  build_live_samples.py  build_pages.py  build_samples.py
samples/bundles/acme-sales/: graph.html  index.md  log.md  overview.md
samples/bundles/acme-sales/datasets/: marketing.md  sales.md
samples/bundles/acme-sales/tables/: marketing-campaigns.md  marketing-touchpoints.md  sales-customers.md  sales-order-items.md  sales-orders.md  sales-products.md
samples/bundles/observability-docs/: graph.html  index.md  log.md  overview.md
samples/bundles/observability-docs/docs/: dashboards.md  getting-started.md  ingest-api.md  installation.md  operations.md
samples/bundles/petclinic-api/: dependencies.md  graph.html  index.md  log.md  overview.md
samples/bundles/petclinic-api/modules/: src.md
samples/bundles/toronto-beaches/: graph.html  index.md  log.md  overview.md
samples/bundles/toronto-beaches/resources/: toronto-beaches-water-quality-2952-csv.md  toronto-beaches-water-quality-2952-geojson.md  toronto-beaches-water-quality-2952-gpkg.md  toronto-beaches-water-quality-2952-zip.md  toronto-beaches-water-quality-4326-csv.md  toronto-beaches-water-quality-4326-geojson.md  toronto-beaches-water-quality-4326-gpkg.md  toronto-beaches-water-quality-4326-zip.md  toronto-beaches-water-quality.md
samples/recipes/: acme_sales.schema.json
samples/recipes/observability_docs/: dashboards.md  getting-started.md  ingest-api.md  installation.md  operations.md
samples/recipes/petclinic_app/: README.md  package.json
samples/recipes/petclinic_app/src/: owners.js  pets.js  server.js
scripts/: check_spec_drift.py  make_cover.py  make_demo_gif.py
spec/: SPEC.sha256
tests/: test_ckan.py  test_consumers.py  test_core.py  test_mcp.py  test_socrata.py  test_spec_and_versions.py  test_webdocs.py
