[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "okfgen"
version = "0.1.0"
description = "Deterministic automation tool that generates Open Knowledge Format (OKF) bundles from sources like git repos, BigQuery, Firebase, local directories, and web docs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "okfgen contributors" }]
keywords = ["okf", "open-knowledge-format", "knowledge-catalog", "documentation", "metadata"]

# Core has ZERO required third-party dependencies: git + local + webdocs work
# out of the box using only the standard library. Cloud sources are optional.
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
bigquery = ["google-cloud-bigquery>=3.0"]
firebase = ["google-cloud-firestore>=2.0"]
all = ["PyYAML>=6.0", "google-cloud-bigquery>=3.0", "google-cloud-firestore>=2.0"]
dev = ["pytest>=7.0", "PyYAML>=6.0"]

[project.scripts]
okfgen = "okfgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["okfgen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
